--- a/public/index.html
+++ b/public/index.html
@@ -17,28 +17,26 @@
         <!-- <form id="animalForm"> -->
         <input type="hidden" id="id" />
 
-        <label for="codigo_lacre">Cóodigo do Lacre:</label><br>
-        <input type="text" id="codigo_lacre" placeholder="Código do Lacre" required/><br>
+        <label class = "input-label" for="codigo_lacre">Cóodigo do Lacre:</label><br>
+        <input class = "input-text" type="text" id="codigo_lacre" placeholder="Código do Lacre" required/><br>
 
-        <label for="nome_animal">Nome do Animal:</label><br>
-        <input type="text" id="nome_animal" placeholder="Nome do Animal"/><br>
+        <label class = "input-label" for="nome_animal">Nome do Animal:</label><br>
+        <input class = "input-text" type="text" id="nome_animal" placeholder="Nome do Animal"/><br>
 
-        <label for="codigo_registro">Código do Registro:</label><br>
-        <input type="text" id="codigo_registro" placeholder="Código do Registro"  /><br>
+        <label class = "input-label" for="codigo_registro">Código do Registro:</label><br>
+        <input class = "input-text" type="text" id="codigo_registro" placeholder="Código do Registro"  /><br>
 
-        <label for="codigo_registro_pai">Código do Registro Pai:</label><br>
-        <input type="text" id="codigo_registro_pai" placeholder="Código do Registro Pai" /><br>
+        <label class = "input-label" for="codigo_registro_pai">Código do Registro Pai:</label><br>
+        <input class = "input-text" type="text" id="codigo_registro_pai" placeholder="Código do Registro Pai" /><br>
 
-        <label for="codigo_registro_mae">Código do Registro da Mãe:</label><br>
-        <input type="text" id="codigo_registro_mae" placeholder="Código do Registro da Mãe" /><br>
+        <label class = "input-label" for="codigo_registro_mae">Código do Registro da Mãe:</label><br>
+        <input class = "input-text" type="text" id="codigo_registro_mae" placeholder="Código do Registro da Mãe" /><br>
 
-        <label for="peso_inicial">Peso Inicial:</label><br>
-        <input type="text" id="peso_inicial" placeholder="Peso Inicial" /><br>
-
+        <label class = "input-label" for="peso_inicial">Peso Inicial:</label><br>
+        <input class = "input-text" type="number" id="peso_inicial" placeholder="Peso Inicial" /> <br>
             
-        <label for="data_nascimento">Data de Nascimento:</label><br>
-        <input type="text" id="data_nascimento" placeholder="Data de Nascimento" type="date"/>
-
+        <label class = "input-label" for="data_nascimento">Data de Nascimento:</label><br>
+        <input class = "input-text" type="date" id="data_nascimento" placeholder="Data de Nascimento" />
 
         <div class="container-botoes">
             <!-- <button type="submit">Salvar</button> -->
@@ -55,7 +53,7 @@
 
   <div id="areaLista">
     <div class="header-com-botao">
-        <h2> Lista Completa de Animais</h2>
+        <h2 class="titulo"> Lista Completa de Animais</h2>
         <button id="btnInclusao" onclick="novoAnimal()">Inclusão</button>
     </div>
   
